[workspace]
members = [
    "crates/vaulkyrie-frost",
    "crates/vaulkyrie-protocol",
    "programs/vaulkyrie-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Naveen"]

[workspace.dependencies]
ed25519-dalek = "2.2.0"
frost-ed25519 = "2.2.0"
pinocchio = "0.7.1"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
sha2 = "0.10.9"
