[workspace]
members = [
    "crates/vaulkyrie-frost",
    "crates/vaulkyrie-protocol",
    "programs/vaulkyrie-core",
    "programs/vaulkyrie-policy-mxe",
]
exclude = [
    "crates/encrypted-ixs",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Naveen"]

[workspace.dependencies]
ed25519-dalek = "2.2.0"
frost-ed25519 = "2.2.0"
pinocchio = "0.7.1"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
sha2 = { version = "0.10.9", default-features = false }
solana-hash = "4.3.0"
solana-instruction = "3.4.0"
solana-message = { version = "4.1.0", features = ["wincode"] }
solana-pubkey = "4.2.0"
solana-signature = { version = "2.0.19", features = ["verify"] }

