[workspace]
members = [
    "crates/vaulkyrie-cli",
    "crates/vaulkyrie-frost",
    "crates/vaulkyrie-frost-wasm",
    "crates/vaulkyrie-protocol",
    "crates/vaulkyrie-sdk",
    "programs/vaulkyrie-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Naveen"]

[workspace.dependencies]
ed25519-dalek = "2.2.0"
frost-ed25519 = "2.2.0"
pinocchio = "0.7.1"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
sha2 = { version = "0.10.9", default-features = false }
curve25519-dalek = "4"
solana-hash = "4.3.0"
solana-instruction = "3.4.0"
solana-message = { version = "4.1.0", features = ["wincode"] }
solana-pubkey = "4.2.0"
solana-signature = { version = "2.0.19", features = ["verify"] }

# Pin blake3 to 1.5.x to avoid edition2024 deps (block-buffer 0.12.0)
# that the BPF toolchain (Cargo 1.84) cannot parse.
# solana-blake3-hasher accepts blake3 ^1, so 1.5.5 is compatible.
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
