[package]
name = "vaulkyrie-frost-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Naveen"]
description = "WASM bindings for Vaulkyrie FROST threshold signing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frost-ed25519 = "2.2.0"
ed25519-dalek = "2.2.0"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
