[package]
name = "vaulkyrie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
curve25519-dalek = { workspace = true }
pinocchio.workspace = true
solana-nostd-sha256 = "0.1.3"
solana-winternitz = "0.1.1"
vaulkyrie-protocol = { path = "../../crates/vaulkyrie-protocol" }

[dev-dependencies]
pinocchio.workspace = true
vaulkyrie-protocol = { path = "../../crates/vaulkyrie-protocol" }
