[package]
name = "vaulkyrie-policy-mxe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = "=0.9.3"
arcium-client = { version = "=0.9.3", default-features = false }
arcium-macros = "=0.9.3"
vaulkyrie-protocol = { path = "../../crates/vaulkyrie-protocol" }
